--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "filament/filament": "^3.2",
+        "bezhansalleh/filament-shield": "3.2.6",
+        "filament/filament": "^3.2.63",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5"
